--- a/templates/workload-master.template.yaml
+++ b/templates/workload-master.template.yaml
@@ -1,13 +1,13 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >-
-  FortiGate Autoscale Solution (New VPC). This template deploys Fortinet FortiGate
-  cluster into a new VPC with a Multi-AZ Autoscale group with Lambda and LifecycleHook.
-  Please see the Quick Start documentation for more details. **WARNING** You will
-  be billed for the FortiGate On-Demand instances and related AWS resources if you
-  create a stack from this template. (qs-1p3pr46rl)
+  FortiGate Auto Scaling Quick Start (new VPC). This template deploys a Fortinet FortiGate
+  cluster into a new VPC with a Multi-AZ Auto Scaling group with AWS Lambda and LifecycleHook.
+  See the Quick Start deployment guide for details. **WARNING** You will be billed for any
+  FortiGate on-demand instances and related AWS resources if you create a stack from this
+  template. (qs-1p3pr46rl)
 Metadata:
   QuickStartDocumentation:
-    EntrypointName: "Launch into a new VPC"
+    EntrypointName: "Parameters for deploying into a new VPC"
     OptionalParameters:
       - InternalLoadBalancerDnsName
   AWS::CloudFormation::Interface:
@@ -31,7 +31,7 @@ Metadata:
           - FortiGateAdminCidr
           - KeyPairName
       - Label:
-          default: FortiGate auto-scaling group configuration
+          default: FortiGate Auto Scaling group configuration
         Parameters:
           - ExpireLifecycleEntry
           - FortiGateAsgDesiredCapacity
@@ -43,7 +43,7 @@ Metadata:
           - FortiGateAsgScaleInThreshold
           - FortiGateElbTgHealthyThreshold
       - Label:
-          default: Load balancing configuration
+          default: Load-balancing configuration
         Parameters:
           - InternalLoadBalancingOptions
           - InternalLoadBalancerDnsName
@@ -78,7 +78,7 @@ Metadata:
       QSS3KeyPrefix:
         default: Quick Start S3 key prefix
       QSS3BucketRegion:
-        default: Quick Start S3 bucket region
+        default: Quick Start S3 bucket Region
       ExpireLifecycleEntry:
         default: Instance lifecycle expiry
       FortiGateAsgCooldown:
@@ -90,7 +90,7 @@ Metadata:
       FortiGateAsgMaxSize:
         default: Maximum group size
       FortiGateAsgHealthCheckGracePeriod:
-        default: Health check grace period
+        default: Health-check grace period
       FortiGateAsgScaleInThreshold:
         default: Scale-in threshold
       FortiGateAsgScaleOutThreshold:
@@ -98,7 +98,7 @@ Metadata:
       FortiGateElbTgHealthyThreshold:
         default: Healthy threshold
       BalanceWebTrafficOverPort:
-        default: Web service traffic port
+        default: Web-service traffic port
       InternalLoadBalancingOptions:
         default: Internal ELB options
       InternalLoadBalancerDnsName:
@@ -108,7 +108,7 @@ Metadata:
       FortiGateAdminCidr:
         default: Admin CIDR block
       KeyPairName:
-        default: Key pair name
+        default: Key-pair name
       FortiGatePskSecret:
         default: FortiGate PSK secret
 Parameters:
@@ -117,9 +117,9 @@ Parameters:
     Default: fgtASG
     MaxLength: '10'
     AllowedPattern: '[A-Za-z0-9]+'
-    ConstraintDescription: must only contain uppercase and lowercase letters and numbers
-    Description: A custom identifier as resource name prefix. Must be at most 10 characters
-      long and only contain uppercase, lowercase letters, and numbers. Max length
+    ConstraintDescription: Must contain only uppercase and lowercase letters and numbers.
+    Description: Custom identifier as resource name prefix. Must be at most 10 characters
+      long and contain only uppercase, lowercase letters, and numbers. Maximum length
       is 10.
   QSS3BucketName:
     Type: String
@@ -128,24 +128,20 @@ Parameters:
       letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
       (-).
     Default: aws-quickstart
-    Description: S3 bucket name for the Quick Start assets. Quick Start bucket name
-      can include numbers, lowercase letters, uppercase letters, and hyphens (-).
-      It cannot start or end with a hyphen (-).
+    Description: S3 bucket that you created for your copy of Quick Start assets. Use this if you decide to customize the Quick Start. This bucket name can include numbers, lowercase letters, uppercase letters, and hyphens, but do not start or end with a hyphen (-).
   QSS3KeyPrefix:
     Type: String
     AllowedPattern: ^[0-9a-zA-Z-/]*$
     ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
       uppercase letters, hyphens (-), and forward slash (/).
     Default: quickstart-fortinet-fortigate/
-    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
-      can include numbers, lowercase letters, uppercase letters, hyphens (-), and
-      forward slash (/).
+    Description: S3 key prefix that is used to simulate a directory for your copy of Quick Start assets. Use this if you decide to customize the Quick Start. This prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slashes (/). See https://docs.aws.amazon.com/AmazonS3/latest/dev/UsingMetadata.html.
   QSS3BucketRegion:
     Default: 'us-east-1'
-    Description: "The AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. When using your own bucket, you must specify this value."
+    Description: "AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. When using your own bucket, you must specify this value."
     Type: String
   AvailabilityZones:
-    Description: The list of Availability Zones to use for the subnets in the VPC.
+    Description: List of Availability Zones to use for the subnets in the VPC.
       The Quick Start uses two Availability Zones from your list and preserves the
       logical order you specify.
     Type: List<AWS::EC2::AvailabilityZone::Name>
@@ -153,36 +149,34 @@ Parameters:
     Type: String
     Default: 10.0.0.0/16
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\/([0-9]|[1-2][0-9]|3[0-2]))?$
-    ConstraintDescription: must be a valid CIDR block format.
-    Description: The CIDR block for the VPC.
+    ConstraintDescription: Must be a valid CIDR block format.
+    Description: CIDR block for the VPC.
   PublicSubnet1CIDR:
     Type: String
     Default: 10.0.0.0/24
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\/([0-9]|[1-2][0-9]|3[0-2]))?$
-    ConstraintDescription: must be a valid CIDR block format.
-    Description: The CIDR block for the public (DMZ) subnet located in Availability
+    ConstraintDescription: Must be a valid CIDR block format.
+    Description: CIDR block for the public (DMZ) subnet located in Availability
       Zone 1.
   PublicSubnet2CIDR:
     Type: String
     Default: 10.0.2.0/24
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\/([0-9]|[1-2][0-9]|3[0-2]))?$
-    ConstraintDescription: must be a valid CIDR block format.
-    Description: The CIDR block for the public (DMZ) subnet located in Availability
+    ConstraintDescription: Must be a valid CIDR block format.
+    Description: CIDR block for the public (DMZ) subnet located in Availability
       Zone 2.
   PrivateSubnet1CIDR:
     Type: String
     Default: 10.0.1.0/24
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\/([0-9]|[1-2][0-9]|3[0-2]))?$
-    ConstraintDescription: must be a valid CIDR block format.
-    Description: The CIDR block for the private subnet located in Availability Zone
-      1.
+    ConstraintDescription: Must be a valid CIDR block format.
+    Description: CIDR block for the private subnet located in Availability Zone 1.
   PrivateSubnet2CIDR:
     Type: String
     Default: 10.0.3.0/24
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\/([0-9]|[1-2][0-9]|3[0-2]))?$
-    ConstraintDescription: must be a valid CIDR block format.
-    Description: The CIDR block for the private subnet located in Availability Zone
-      2.
+    ConstraintDescription: Must be a valid CIDR block format.
+    Description: CIDR block for the private subnet located in Availability Zone 2.
   FortiGateInstanceType:
     Type: String
     Default: c5.large
@@ -193,17 +187,17 @@ Parameters:
       - c5.2xlarge
       - c5.4xlarge
       - c5.9xlarge
-    ConstraintDescription: must be a valid EC2 instance type.
+    ConstraintDescription: Must be a valid EC2 instance type.
     Description: >-
-      Instance type to launch as FortiGate On-Demand instances. There are t2.small
-      and compute-optimized instances such as c4 and c5 available with different vCPU
-      sizes and bandwidths. For more information about instance types, see https://aws.amazon.com/ec2/instance-types/
+      Instance type to launch as FortiGate on-demand instances. There are t2.small
+      and compute-optimized instances, such as c4 and c5, available with different vCPU
+      sizes and bandwidths. For more information about instance types, see https://aws.amazon.com/ec2/instance-types/.
   ExpireLifecycleEntry:
     Type: Number
     Default: 300
     MinValue: 60
     MaxValue: 3600
-    ConstraintDescription: must be a valid number between 60 and 3600.
+    ConstraintDescription: Must be a valid number between 60 and 3600.
     Description: FortiGate instance lifecycle expiry entry (in seconds). Minimum is
       60. Maximum is 3600.
   FortiGateAsgCooldown:
@@ -211,112 +205,111 @@ Parameters:
     Default: 300
     MinValue: 60
     MaxValue: 3600
-    ConstraintDescription: must be a valid number between 60 and 3600.
-    Description: Auto-Scaling group waits for the cooldown period (in seconds) to
+    ConstraintDescription: Must be a valid number between 60 and 3600.
+    Description: Auto Scaling group waits for the cooldown period (in seconds) to
       complete before resuming scaling activities. Minimum is 60. Maximum is 3600.
   FortiGateAsgDesiredCapacity:
     Type: Number
     Default: 2
     MinValue: 2
-    ConstraintDescription: must be a valid number not less than 2.
-    Description: The number of FortiGate instances the group should have at any time,
+    ConstraintDescription: Must be a valid number not less than 2.
+    Description: Number of FortiGate instances the group should have at any time,
       also called desired capacity. Must keep at least 2 FortiGates in the group for
       High Availability. Minimum is 2.
   FortiGateAsgMinSize:
     Type: Number
     Default: 2
     MinValue: 2
-    ConstraintDescription: must be a valid number not less than 2.
-    Description: Minimum number of FortiGate instances in the Auto-Scaling Group.
+    ConstraintDescription: Must be a valid number not less than 2.
+    Description: Minimum number of FortiGate instances in the Auto Scaling group.
       Minimum is 2.
   FortiGateAsgMaxSize:
     Type: Number
     Default: 4
     MinValue: 2
-    ConstraintDescription: must be a valid number not less than 2.
-    Description: Maximum number of FortiGate instances in the Auto-Scaling Group.
+    ConstraintDescription: Must be a valid number not less than 2.
+    Description: Maximum number of FortiGate instances in the Auto Scaling Group.
       Minimum is 2.
   FortiGateAsgHealthCheckGracePeriod:
     Type: Number
     Default: 300
     MinValue: 60
-    ConstraintDescription: must be a valid number not less than 60.
-    Description: The length of time (in seconds) that Auto-Scaling waits before checking
+    ConstraintDescription: Must be a valid number not less than 60.
+    Description: Length of time (in seconds) that Auto Scaling waits before checking
       an instance's health status. Minimum is 60.
   FortiGateAsgScaleInThreshold:
     Type: Number
     Default: 25
     MinValue: 1
     MaxValue: 100
-    ConstraintDescription: must be a valid number between 1 and 100.
-    Description: The threshold (in percentage) for the FortiGate Auto-Scaling group
+    ConstraintDescription: Must be a valid number between 1 and 100.
+    Description: Threshold (in percentage) for the FortiGate Auto Scaling group
       to scale-in (remove) 1 instance. Minimum is 1. Maximum is 100.
   FortiGateAsgScaleOutThreshold:
     Type: Number
     Default: 80
     MinValue: 1
     MaxValue: 100
-    ConstraintDescription: must be a valid number between 1 and 100.
-    Description: The threshold (in percentage) for the FortiGate Auto-Scaling group
+    ConstraintDescription: Must be a valid number between 1 and 100.
+    Description: Threshold (in percentage) for the FortiGate Auto Scaling group
       to scale-out (add) 1 instance. Minimum is 1. Maximum is 100.
   FortiGateElbTgHealthyThreshold:
     Type: Number
     Default: 3
     MinValue: 3
-    ConstraintDescription: must be a valid number not less than 3.
-    Description: The number of consecutive health check failures required before considering
+    ConstraintDescription: Must be a valid number not less than 3.
+    Description: Number of consecutive health-check failures required before considering
       a FortiGate instance unhealthy. Minimum is 3.
   BalanceWebTrafficOverPort:
     Type: Number
     Default: 443
     MinValue: 1
     MaxValue: 65535
-    ConstraintDescription: must be a valid port number between 1 and 65535.
-    Description: Balance web service traffic over this port if the internal web-service
+    ConstraintDescription: Must be a valid port number between 1 and 65535.
+    Description: Balance web-service traffic over this port if the internal web-service
       load balancer is enabled. Minimum is 1. Maximum is 65535.
   InternalLoadBalancingOptions:
     Type: String
-    Default: add a new internal load balancer
+    Default: Add a new internal load balancer
     AllowedValues:
-      - add a new internal load balancer
-      - use a load balancer specified below
-      - do not need one
-    ConstraintDescription: must choose from the provided options.
-    Description: Options for add an optional pre-defined load balancer to route traffic
-      to web service in the private subnets. You can optionally use your own one or
-      decide to not need one.
+      - Add a new internal load balancer
+      - Use a load balancer specified below
+      - Do not need one
+    ConstraintDescription: Must choose from the provided options.
+    Description: (Optional) Predefined load balancer that routes traffic
+      to web service in the private subnets. You may use your own or
+      choose that you don't need one.
   InternalLoadBalancerDnsName:
     Type: String
-    Description: (Optional)DNS Name of the Elastic Load Balancer which is used in
-      the private subnets. Specify if only you use your own one.
+    Description: (Optional) Domain Name System (DNS) name of the Network Load Balancer that's used in the private subnets. Specify only if you added an internal load balancer under `InternalLoadBalancingOptions`.
   FortiGatePskSecret:
     Type: String
     NoEcho: true
     MaxLength: '128'
-    Description: A secret key for the FortiGate instances to securely communicate
-      with each other. It can be of your choice of a string, such as numbers or letters
-      or the combination of them. Max length 128.
+    Description: Secret key for the FortiGate instances to securely communicate
+      with each other. It can be of your choice of numbers or letters
+      or a combination. Maximum length is 128.
   FortiGateAdminPort:
     Type: Number
     Default: 8443
     MinValue: 1
     MaxValue: 65535
-    ConstraintDescription: must be a valid port number between 1 and 65535.
-    Description: 'A port number for FortiGate administration. Minimum is 1. Maximum
-      is 65535. Do not use: 443, 541, 514, 703 because these are FortiGate reserved
+    ConstraintDescription: Must be a valid port number between 1 and 65535.
+    Description: 'Port number for FortiGate administration. Minimum is 1. Maximum
+      is 65535. Do not use: 443, 541, 514, 703 because these are FortiGate-reserved
       ports.'
   FortiGateAdminCidr:
     Type: String
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\/([0-9]|[1-2][0-9]|3[0-2]))?$
-    ConstraintDescription: must be a valid CIDR block format and 0.0.0.0/0 is highly not recommended.
+    ConstraintDescription: Must be a valid CIDR block format, and 0.0.0.0/0 is highly not recommended.
     Description: >-
-      CIDR block for external admin management access. **WARNING!** 0.0.0.0/0 accepts
+      CIDR block for external administrator management access. **WARNING!** 0.0.0.0/0 accepts
       connections from any IP address. We recommend that you use a constrained CIDR
       range to reduce the potential of inbound attacks from unknown IP addresses.
   KeyPairName:
     Type: AWS::EC2::KeyPair::KeyName
-    ConstraintDescription: must specify an admin access key pair for FortiGate instances.
-    Description: Amazon EC2 Key Pair for admin access.
+    ConstraintDescription: You must specify an administrator access key pair for FortiGate instances.
+    Description: Amazon EC2 key pair for administrator access.
 Conditions:
   UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-quickstart']
 Resources:
